fix positioning of gear dropdown

--- a/app/assets/stylesheets/components/_gear_dropdown.scss
+++ b/app/assets/stylesheets/components/_gear_dropdown.scss
@@ -1,8 +1,8 @@
 // Use the gear_dropdown.png screenshot as a style guide
 .gear-dropdown {
   position: absolute;
-  right: 70px;
-  top: 50px;
+  right: 10%;
+  top: 7%;
   background: white;
   width: 240px;
   border: 1px solid $light-gray;
